--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,6 +4,7 @@ $activeCircle: #FF7A00;
 $disabledCircle: #FFD4AD;
 $textMain: #3A3A3A;
 $activeJobCircle: #00A372;
+$otherLine: #8F59B9;
 
 //mixins
 @mixin fontStyle($size) {
