--- a/src/components/Jobs/style.module.scss
+++ b/src/components/Jobs/style.module.scss
@@ -71,12 +71,12 @@
   &__borderActive {
     position: absolute;
     @include circleStyle(#fff);
-    width: 33px;
-    height: 33px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
     border: 1px solid $activeJobCircle;
-    top: -3px;
-    left: -3px;
+    top: -4px;
+    left: -4px;
     z-index: -1;
     animation-name: animate;
     animation-duration: .3s;
@@ -93,5 +93,6 @@
     border-radius: 6px;
     backdrop-filter: blur(2px);
     background: rgba(255, 255, 255, 0.5);
+    z-index: -3;
   }
 }
